<resources>
    <string name="app_name">Career Advisor</string>
    <string name="bot_name">Alyssa</string>
    <string name="company_name">LloydsByte LLC</string>
    <string name="default_notification_channel_id">LLOYDSBYTE.APPKIT-CAREER_ADVISOR</string>
    <string name="version_title">What\'s new in version %s</string>
    <string name="version_message"> Added Premium membership to Career Advisor! Elevate your career journey with Career Advisor Premium. Enjoy and good luck on your job hunt, I hope this app helps you as it did for me!</string>
    <string name="force_update_title">A new update is available</string>
    <string name="force_update_message">Please update the app in order to continue to use it.</string>
    <string name="prompt_intro">You are The clients name is %s, they are %s years old. </string>
    <string name="prompt_mock_subscribed"> Once completed, ask the client if they would like to go one more time or if they feel ready for the interview. Inform them about the interview tips (a feature in the app).</string>
    <string name="prompt_mock_not_subscribed"> Once completed, inform the client if they would like to continue they can all they need to do is enroll in a subscription. To enable this they need to go into the settings of the app and click on Manage Membership.</string>
    <string name="intro_title">Hello I\'m</string>
    <string name="intro_landing_body">I am an Artificial Intelligence based chat bot designed and built by Lloyd\'sByte LLC and powered by OpenAI\'s ChatGPT.</string>
    <string name="intro_created_by">A Lloyd\'sByte Creation</string>
    <string name="intro_next_button">Next</string>
    <string name="intro_landing_terms">With that being said, I want to make sure you are aware of my limitations. I can not control ChatGPT or it\'s responses, I have created carefully curated phrases to help you achieve the finest responses from ChatGPT. This application was created with the  intention to help assist you and NOT to be used as a replacement for a professional.</string>
    <string name="intro_landing_terms_html">To learn more about ChatGPT\'s terms and policies click <a href="https://openai.com/policies">Here</a></string>
    <string name="intro_terms_understood">I understand and agree the developer is not liable.</string>
    <string name="intro_profile_title">But first…</string>
    <string name="intro_profile_body">I will need to know some information about you, just your name and age to better assist you.</string>
    <string name="intro_profile_name">Name:</string>
    <string name="intro_profile_age">Age:</string>
    <string name="intro_signin_header">One last thing…</string>
    <string name="intro_signin_message">Chap-E requires a Google account to keep track of usage limits.\nTo continue please sign in.</string>
    <string name="intro_signin_disclaimer">**I do not collect any data from you nor do I store any personal information on any cloud.</string>
    <string name="intro_signin_button">Sign in</string>
    <string name="intro_skip_button">Skip</string>
    <string name="intro_newuser_title">Congratulation!</string>
    <string name="intro_newuser_message">Since you are an early adopter, you will get free lifetime access to all the app\'s features! Thank you for being a part of the early adopters!</string>
    <string name="intro_newuser_letgo">Let\'s Get Started!</string>
    <string name="nav_history">History</string>
    <string name="nav_home">Home</string>
    <string name="home_welcome_text">Hi %s,</string>
    <string name="home_welcome_two">How can I help you today?</string>
    <string name="chat_loading">Thinking…</string>
    <string name="chat_basic_title">Ask me anything!</string>
    <string name="chat_default_prompt">You are an excellent chatbot, you are funny and love to tell jokes.</string>
    <string name="chat_pro_title">Speaking to a %s bot</string>
    <string name="chat_convo_cost">Conversation Cost: %s</string>
    <string name="chat_model">Chat Model</string>
    <string-array name="model_options">
        <item>GPT 3.5 Turbo</item>
        <item>GPT 4.0</item>
        <item>GPT 4.0 Turbo</item>
    </string-array>
    <string name="home_new_chat">Start\nnew chat</string>
    <string name="home_new_chat_title">Ask me anything</string>
    <string name="home_new_chat_hint">Enter question here</string>
    <string name="home_create_img">Create\nnew image</string>
    <string name="home_create_img_title">Generate an image from your words</string>
    <string name="home_create_img_hint">Describe the image here</string>
    <string name="home_pro_specific">Subject Specific Chats</string>
    <string name="home_pro_personal">Personal</string>
    <string name="home_pro_business">Business</string>
    <string name="pro_legal_disclaimer">Using the GPT Legal Advisor Bot means you are only accessing legal information, not legal advice. No attorney-client relationship is established by using the bot, nor with its creators. This chatbot is not a replacement for expert legal advice and users should always seek the counsel of a licensed attorney to handle particular legal situations. The information provided by the bot, while aiming to be accurate, full, and timely, is not guaranteed as such and can be altered without prior notification.\nUtilizing the services of the GPT Legal Advisor Bot implies acceptance of all risks related to its usage, which includes potential inaccuracies or inconsistencies in the information and its unsuitability to your personal legal circumstances. Any negative outcomes, including damages, losses, or costs, experienced as a consequence of using the application or trusting the information provided are not the responsibility of the bot\'s creators.\nWhen it comes to legal actions, always proceed with caution, utilize your personal judgment, and, if required, consult with a professional legal advisor.</string>
    <string name="pro_legal_question_template">I need help with a %s</string>
    <string name="pro_legal_options_title">What type of law help do you need?</string>
    <string-array name="pro_legal_options">
        <item>Family law matter</item>
        <item>Contract dispute</item>
        <item>Health related issue</item>
        <item>Accident claim</item>
        <item>Criminal law advice</item>
        <item>Injury claim</item>
        <item>Work related issue</item>
        <item>Traffic violation</item>
        <item>Benefits claim</item>
        <item>Estates and wills issue</item>
        <item>Money related issue</item>
    </string-array>
    <string name="pro_chef_question_template">I need help with %s</string>
    <string name="pro_generic_options_title">What kind of help do you need?</string>
    <string-array name="pro_chef_options">
        <item>A Recipe</item>
        <item>Meal ideas</item>
        <item>Allergy concerns</item>
        <item>Cooking advice</item>
        <item>Ingredient alternatives</item>
    </string-array>
    <string-array name="pro_handyman_options">
        <item>Repair</item>
        <item>Addition</item>
        <item>Modification</item>
        <item>General information</item>
    </string-array>
    <string name="home_saved_chats">View\nSaved Chats</string>
    <string name="history_delete_title">Confirm Delete</string>
    <string name="history_delete_message">This will permanently delete the %s conversation.</string>
    <string name="history_delete">Delete Conversation</string>
    <string name="settings_version">%s (%d)</string>
    <string name="settings_temp">Temperature</string>
    <string name="settings_temp_subtitle">AI\'s Creativity</string>
    <string name="chat_moreinfo_title">What is temperature</string>
    <string name="chat_moreinfo_subtitle">What sampling temperature to use, between 0.1 and 1.\nHow should I set the temperature parameter?\n\n
Lower values for temperature result in more consistent outputs, while higher values generate more diverse and creative results. Select a temperature value based on the desired trade-off between coherence and creativity for your specific application.\nsource: OpenAI.com</string>
    <string name="settings_upgrade_title">Upgrade Your Experience</string>
    <string name="settings_upgrade_rm_ads">Remove Ads</string>
    <string name="settings_upgrade_rm_ads_subtitle">Remove advertising from your experience and unlock all professions</string>
    <string name="settings_upgrade_subscribe">Subscribe</string>
    <string name="settings_upgrade_subscribe_subtitle">Subscribe and get ad-free access to all professions and double your usage limit</string>
    <string name="settings_profile_title">Profile</string>
    <string name="settings_profile_name">Name</string>
    <string name="settings_profile_name_subtitle">Change your name from %s</string>
    <string name="settings_profile_age">Age</string>
    <string name="settings_profile_age_subtitle">Change your age from %s</string>
    <string name="settings_profile_membership">Membership</string>
    <string-array name="settings_profile_memberships">
        <item>Free</item>
        <item>Premium</item>
        <item>Debug</item>
    </string-array>
    <string name="settings_profile_status">Membership: %s</string>
    <string name="settings_profile_usage_limit">Usage Limit</string>
    <string name="settings_profile_usage_status">Used: %s</string>
    <string name="settings_chat_title">Chat</string>
    <string name="settings_chat_token_header">Tokens Used Today</string>
    <string name="settings_chat_tokens_subtitle">%d tokens</string>
    <string name="settings_chat_turbo">GPT4 Turbo</string>
    <string name="settings_chat_turbo_switch">Use The Latest Preview Version</string>
    <string name="settings_stats_title">User Stats</string>
    <string name="settings_membership_status">Membership Status</string>
    <string name="settings_rate">Rate App</string>
    <string name="settings_rate_subtitle">Let the world know how you feel</string>
    <string name="settings_share">Share App</string>
    <string name="settings_share_subtitle">Send others a link to download Career Advisor</string>
    <string name="settings_about">About Career Advisor</string>
    <string name="settings_about_subtitle">Learn more about the developer and this app</string>
    <string name="settings_about_message">About this…\n\Career Advisor AI was designed and created by LloydsByte LLC to help you get that dream job. What started off as an personal project, slowly became something I want to share with others.\n\nSpecial thanks:\nEarly Adopters who helped fine tune the app.</string>
    <string name="settings_special_thanks">Special thanks</string>
    <string name="settings_special_subitle">Saying a special thank you to those who tested Chap-E</string>
    <string name="settings_contact">Contact Us</string>
    <string name="settings_contact_subtitle">Tell us something you enjoy or even dislike</string>
    <string name="settings_debug_token_usage">Tokens Used</string>
    <string name="settings_debug_membership">Switch Membership</string>
    <string-array name="settings_debug_memberships">
        <item>FREE</item>
        <item>PAID</item>
        <item>SUB</item>
        <item>LIFE</item>
    </string-array>
    <string name="settings_debug_delete_account">Delete Account</string>
    <string name="settings_debug_delete_subtitle">Deletes and restarts the application</string>
    <string name="settings_debug_reset_usage">Reset Usage</string>
    <string name="settings_debug_reset_subtitle">Resets the per day limit</string>
    <string name="debug_clear">Clear</string>
    <string name="debug_core">Test Core Components</string>
    <string name="debug_network">Test Network Components</string>
    <string name="debug_database">Read database results</string>
    <string name="debug_signin">Sign in</string>
    <string name="debug_gpt">Test out Chat Gpt</string>
    <string name="debug_purchase">Test out IAP</string>
</resources>