<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <TextView
        android:id="@+id/landing_welcome_two"
        style="@style/fontIntroWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="38sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/default_side_margins"
        />

    <TextView
        android:id="@+id/terms_description"
        style="@style/fontMedium_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margins"
        android:text="@string/intro_landing_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/landing_welcome_two"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/terms_link"
        style="@style/fontMedium_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margins"
        android:text="@string/intro_landing_terms_html"
        android:linksClickable="true"
        android:textColorLink="@color/hyperlink_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_description"
        android:visibility="invisible"/>



    <CheckBox
        android:id="@+id/terms_checked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/fontSmall_reg"
        android:layout_margin="@dimen/default_side_margins"
        android:text="@string/intro_terms_understood"
        />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/terms_next_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/mainExtFab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/terms_checked"
        app:icon="@drawable/ic_next"
        android:text="@string/intro_next_button"
        android:layout_margin="@dimen/default_side_margins"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>