<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <include
        android:id="@+id/debug_terminal_layout"
        layout="@layout/layout_debug_terminal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debug_clear_terminal_fab"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/default_double_margin"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/debug_clear_terminal_fab"
        style="@style/mainExtFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_clear"
        app:icon="@drawable/ic_terminal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debug_terminal_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="420dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/debug_core"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_side_margins"
                app:icon="@drawable/ic_debug"
                android:text="@string/debug_core"
                style="@style/mainExtFab"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/debug_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_side_margins"
                app:icon="@drawable/ic_debug"
                android:text="@string/debug_network"
                style="@style/mainExtFab"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/debug_database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_side_margins"
                app:icon="@drawable/ic_debug"
                android:text="@string/debug_database"
                style="@style/mainExtFab"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/debug_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_side_margins"
                app:icon="@drawable/ic_debug"
                android:text="@string/debug_signin"
                style="@style/mainExtFab"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/debug_gpt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_side_margins"
                app:icon="@drawable/ic_debug"
                android:text="@string/debug_gpt"
                style="@style/mainExtFab"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/debug_iap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_side_margins"
                app:icon="@drawable/ic_debug"
                android:text="@string/debug_purchase"
                style="@style/mainExtFab"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>