<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <TextView
            android:id="@+id/signin_title"
            style="@style/fontIntroWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_double_margin"
            android:gravity="center"
            android:text="@string/intro_signin_header"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/signin_lottie"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signin_title"
            android:layout_margin="@dimen/default_side_margins"
            android:padding="@dimen/default_side_margins"
            app:lottie_rawRes="@raw/lottie_signin"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_speed=".5"/>

        <TextView
            android:id="@+id/signin_message"
            style="@style/fontSmall_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/intro_signin_message"
            app:layout_constraintTop_toBottomOf="@id/signin_lottie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/default_padding"
            android:layout_margin="@dimen/default_side_margins"
            />


        <TextView
            android:id="@+id/signin_disclaimer"
            style="@style/fontSmall_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/intro_signin_disclaimer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signin_message"
            android:padding="@dimen/default_padding"
            android:layout_margin="@dimen/default_extra_large_margin"
            />



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/landing_next_fab"
        style="@style/mainExtFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/default_double_margin"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/intro_signin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/landing_skip_fab"
        style="@style/mainExtFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/default_double_margin"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/intro_skip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />



</androidx.constraintlayout.widget.ConstraintLayout>